change output directory

--- a/_server_config.yml
+++ b/_server_config.yml
@@ -1,5 +1,5 @@
 source:      .
-destination: ./_site
+destination: ../bioreports
 includes:    ./_includes
 
 pygments:    true
@@ -7,6 +7,11 @@ markdown:    rdiscount
 permalink:   /:year-:month-:day_:title.html
 
 baseurl: /
+
+index_pages:
+  category:
+    do_related: false
+    title_prefix: 'Lab: '
 
 rdiscount:
   extensions: []
