use categories for categories not labs

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,8 @@ baseurl: /
 index_pages:
   category:
     do_related:     false
-    title_prefix:   'Lab: '
+    pluralize:      false
+    title_prefix:   'Category: '
   analyst:
     do_related:     false
     pluralize:      false
@@ -20,10 +21,15 @@ index_pages:
     do_related:     false
     pluralize:      false
     title_prefix:   'Researcher: '
+  pi:
+    do_related:     false
+    pluralize:      false
+    title_prefix:   'PI: '
 
-category_dir: labs
+category_dir: category
 analyst_dir: analyst
 researcher_dir: researcher
+pi_dir: pi
 
 rdiscount:
   extensions: []
